--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,21 @@
             "email": "simivar@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "ext-soap": "*",
+        "phpro/soap-client": "^1.4",
+        "psr/http-message": "^1.0",
+        "php-http/httplug": "^2.1",
+        "php-http/message-factory": "^1.0",
+        "php-http/discovery": "^1.7",
+        "php-http/message": "^1.8",
+        "php-http/client-common": "^2.1",
+        "php-http/guzzle7-adapter": "^1.0",
+        "robrichards/wse-php": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Simivar\\PocztaPolskaWebservice\\": "src/"
+        }
+    }
 }
