--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,12 @@
         "php-http/message": "^1.8",
         "php-http/client-common": "^2.1",
         "php-http/guzzle7-adapter": "^1.0",
-        "robrichards/wse-php": "^2.0"
+        "robrichards/wse-php": "^2.0",
+        "phpro/soap-client": "^1.4"
     },
     "autoload": {
         "psr-4": {
             "Simivar\\PocztaPolskaTracking\\": "src/"
         }
-    },
-    "require-dev": {
-        "phpro/soap-client": "^1.4"
     }
 }
