--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
         "psr-4": {
             "Simivar\\PocztaPolskaTracking\\": "src/"
         }
+    },
+    "require-dev": {
+        "nyholm/psr7": "^1.4",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "php-http/guzzle7-adapter": "^1.0"
     }
 }
