--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "require-dev": {
         "nyholm/psr7": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "php-http/guzzle7-adapter": "^1.0"
+        "php-http/guzzle7-adapter": "^1.0",
+        "phpstan/phpstan": "^0.12.93"
     }
 }
