--- a/.github/workflows/quality-assurance.yml
+++ b/.github/workflows/quality-assurance.yml
@@ -13,10 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: "actions/checkout@v2"
+
+      - name: Install composer packages
+        uses: "ramsey/composer-install@v1"
 
       - name: PHPStan
-        uses: docker://oskarstark/phpstan-ga
+        uses: "docker://oskarstark/phpstan-ga"
         with:
           args: analyse
