--- a/.github/workflows/quality-assurance.yml
+++ b/.github/workflows/quality-assurance.yml
@@ -23,3 +23,18 @@ jobs:
         uses: "docker://oskarstark/phpstan-ga"
         with:
           args: analyse
+
+  phpunit:
+    name: PHPUnit
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: "actions/checkout@v2"
+
+      - name: Install composer packages
+        uses: "ramsey/composer-install@v1"
+
+      - name: PHPUnit
+        uses: "php-actions/phpunit@v3"
