--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "nyholm/psr7": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.0",
         "php-http/guzzle7-adapter": "^1.0",
-        "phpstan/phpstan": "^0.12.93"
+        "phpstan/phpstan": "^0.12.93",
+        "phpunit/phpunit": "^9.5"
     }
 }
